@@ -2,6 +2,7 @@ Acquired Property | view
 Action Information | view
 Alarm Tool | alarm_report
 Alarm Tool | view
+Alarm | call_active_sense
 Alarm | configuration
 Alarm | custom_report
 Alarm | notification
